# etsuko

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  COPYRIGHT  README.md  shell_minimal.html  vcpkg.json
assets/: sayonara invader.txt
src/: audio.c  audio.cpp  audio.h  common.h  config.c  config.h  constants.h  container_utils.c  container_utils.h  error.c  error.h  etsuko.c  etsuko.h  events.c  events.cpp  events.h  karaoke.c  karaoke.cpp  karaoke.h  main.c  main.cpp  parser.cpp  parser.h  renderer.c  renderer.cpp  renderer.h  renderer_ex.c  renderer_ex.h  repository.c  repository.cpp  repository.h  resource_includes.h  song.c  song.h  str_utils.c  str_utils.h  ui.c  ui.h  ui_ex.c  ui_ex.h
src/contrib/: incbin.h  minimp3.c  stb_image.c
src/shaders/: am gradient.frag.glsl  am gradient.vert.glsl  blur.frag.glsl  blur.vert.glsl  cloud gradient.frag.glsl  copy.frag.glsl  copy.vert.glsl  default.vert.glsl  dynamic gradient.frag.glsl  dynamic gradient.vert.glsl  fsq.vert.glsl  gradient.frag.glsl  gradient.vert.glsl  random gradient.frag.glsl  random gradient.vert.glsl  rect.frag.glsl  rect.vert.glsl  texture.frag.glsl  texture.vert.glsl
